<resources>
    <string name="app_name">Donation</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="paymentAmount"></string>
    <string name="totalSoFar"></string>
    <string name="action_settings">Setting</string>
    <string name="menuReset">Reset</string>


</resources>